# ATE

./: .gitattributes  .gitignore  CITATION.cff  LICENSE  README.md  environment.yml  pyproject.toml  requirements-brax.txt  requirements.txt
configs/mujoco/: hopper_ppo_daze.yaml  reacher_ppo_daze.yaml  reacher_sac_daze.yaml
docs/: dependency_check.md  reproduction.md  threat_model.md
experiments/: brax_gpu_receipt_benchmark.py  brax_receipts.py  cartpole_record.py  gpu_batch_receipt_stress.py  gpu_receipts.py
paper/: USENIX_Poster.tex
results/promoted/: provenance.md  table2_systems.csv
results/source_summaries/: README.md  promoted_sources.json
results/sources/: README.md  source.json
results/tables/: provenance.md  table1_learning.csv  table2_systems.csv
scripts/: audit_protocol.py  check_results.py  reproduce_results.py  run_mujoco.py  run_protocol_audit.py
src/ate/: __init__.py  gate.py  hashing.py  receipts.py  transforms.py
